--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="header__wrapper">
 				<div class="header__logo">
 					<a href="/" class="header__logo-link">
-						<img src="/img/svg/odigo-logo.svg" alt="Discover Japan" class="header__logo-pic">
+						<img src="./img/svg/odigo-logo.svg" alt="Discover Japan" class="header__logo-pic">
 					</a>
 				</div>
 				<nav class="header__nav">
@@ -82,7 +82,7 @@
 				<div class="benefits__cards">
 					<div class="benefits_card">
 						<div class="benefits__card-pic">
-							<img src="/img/svg/church-icon.svg" alt="Welcome to Odigo!" class="benefits__card-thumb">
+							<img src="./img/svg/church-icon.svg" alt="Welcome to Odigo!" class="benefits__card-thumb">
 						</div>
 						<h3 class="benefits__card-title">
 							Welcome to Odigo!
@@ -94,7 +94,7 @@
 					</div>
 					<div class="benefits_card">
 						<div class="benefits__card-pic">
-							<img src="/img/svg/person-icon.svg" alt="Your Personal Japan Guide" class="benefits__card-thumb">
+							<img src="./img/svg/person-icon.svg" alt="Your Personal Japan Guide" class="benefits__card-thumb">
 						</div>
 						<h3 class="benefits__card-title">
 							Your Personal Japan Guide
@@ -106,7 +106,7 @@
 					</div>
 					<div class="benefits__card">
 						<div class="benefits__card-pic">
-							<img src="/img/svg/building-icon.svg" alt="Promoting Local Businesses" class="benefits__card-thumb">
+							<img src="./img/svg/building-icon.svg" alt="Promoting Local Businesses" class="benefits__card-thumb">
 						</div>
 						<h3 class="benefits__card-title">
 							Promoting Local Businesses
